--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
 .App {
-  text-align: center;
+	text-align: center;
+	background-color: antiquewhite;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+/* Styles for <Form1 /> */
+form {
+	text-align: left;
+}
+
+label {
+	display: inline-block;
+	margin-left: 2em;
+	text-align: right;
+}
+
+.input-box {
+	text-align: left;
+	height: 110px;
+	padding: 5px;
+	padding-left: 10px;
+}
+
+.btn {
+	margin: 15px;
+}
+
+.left-button {
+	margin-right: 50px;
+}
+
+.right-button {
+	margin-left: 50px;
 }
