Bar charts appear

--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,7 @@ label {
 	z-index: -1;
 	overflow: hidden;
 	display: inline-block;
-	background-color: aqua;
+	background-color: lightgray;
 }
 
 .inFront {
